# McFACTS

./: pyproject.toml
scripts/: mcfacts_sim.py
src/mcfacts/objects/: agnobject.py
src/mcfacts/physics/: accretion.py  disk_capture.py  dynamics.py  lum.py  migration.py  point_masses.py  stellar_interpolation.py  tde.py
src/mcfacts/physics/binary/: evolve.py  formation.py  merge.py
src/mcfacts/setup/: setupdiskblackholes.py
tests/: z_analytical_kick_test.py  z_powerlaw_test.py  z_sweep_test.py
tests/optimizations/: analytical_inputs.csv  baruteau_inputs.csv  baruteau_test.py  cube_stars_optimization_test.py  encounters_optimization_test.py  gw_strain_inputs.csv  gw_strain_test.py  jet_inputs.csv  jet_luminosity_test.py  merged_orb_inputs.csv  merged_orb_test.py  powerlaw_inputs.csv  r_schwarzschild_test.py  rg_units_test.py  shock_inputs.csv  shock_luminosity_test.py  si_from_r_g_test.py  tau_dyn_test.py  tau_inputs.csv  tau_spline.csv  torque_test.py
